# project_fastapi_1

./: main.py  pyproject.toml
