[tool.poetry]
name = "project-fastapi-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standart"], version = "^0.24.0.post1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
